--- a/Documentation/PLX_SDK_Linux_Release_Notes.htm
+++ b/Documentation/PLX_SDK_Linux_Release_Notes.htm
@@ -4326,7 +4326,7 @@ class=GramE>The</span> complete SDK package may not be distributed</p>
 style='font-family:Symbol'>·</span><span style='font-size:7.0pt;font-family:
 "Times New Roman","serif"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Applications,
 utilities, or tools provided by PLX, such as <span class=SpellE>PLXMon</span>
-or the PLX Device Editor, may not be distributed</p>
+or the PEX Device Editor, may not be distributed</p>
 
 <p class=MsoBodyText style='margin-left:.75in;text-indent:-.25in'><span
 style='font-family:Symbol'>·</span><span style='font-size:7.0pt;font-family:
